# NeuroNetAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PRODUCTION_AUDIT.md  README.md  SPRINT_22_1_REPORT.md  SPRINT_23_TASKS.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py  schemas.py
backend/app/api/routes/: analysis.py  health.py  imports.py  projects.py
backend/app/application/: agent_service.py  analysis_service.py  import_service.py  project_service.py
backend/app/application/agents/: __init__.py  base.py  (+4 more)
backend/app/domain/: entities.py  repositories.py
backend/app/infrastructure/: agent_run_repository_impl.py  communication_event_repository_impl.py  conversation_summary_repository_impl.py  database.py  document_repository_impl.py  entity_repository_impl.py  import_job_repository_impl.py  models.py  project_repository_impl.py  sentiment_repository_impl.py  task_repository_impl.py
backend/app/prompts/: __init__.py  chat.md  conversation.md  entities.md  prompt_builder.py  sentiment.md  tasks.md
backend/app/shared/: config.py  exceptions.py  logging.py
backend/migrations/: env.py
backend/migrations/versions/: add_import_job_id_to_documents.py  add_sentiment_fields.py
backend/scripts/: gemini_trace_report.md  ollama_debug_report.md  test_agents.py  trace_gemini.py
backend/tests/: test_ai_agents.py  test_ai_engine_integration.py  test_import_pipeline.py  test_project_service.py  test_rag_foundation.py  test_sample_meeting.py
(+65 files in other folders)
